[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "zkss",
    "indexer",
    "settings",
    "mcp_server",
    "zkss_markdown",
    "rename_txt_to_md",
]

[tool.uv]
constraint-dependencies = [
    "cryptography>=48.0.0",
    "python-multipart>=0.0.28",
    "requests>=2.34.0",
    "urllib3>=2.7.0",
]

[project]
name = "zk-smart-search"
version = "0.3.8"
description = "A smart Zettelkasten search tool with semantic capabilities and MCP support."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "rich>=13.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "mcp>=1.0.0",
]

[project.scripts]
zkss = "zkss:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
